# shared-resource-ipc

./: .gitignore  Cargo.toml  README.md
src/: error.rs  lib.rs
src/unix/: semaphore.rs  shared_mem.rs  unix.rs
