[package]
name = "shared-resource-ipc"
version = "0.1.0"
edition = "2021"
authors = ["Kristofer Karam"]
description = "Wrapper for a resource that can be shared across processes."
license = "MIT"
readme = "README.md"
repository = "https://github.com/KrisNK/shared-resource-ipc"
homepage = "https://github.com/KrisNK/shared-resource-ipc"
keywords = ["ipc", "shared", "memory"]

[dependencies]
thiserror = "1"
libc = "0.2"
serde = {version = "1", features = ['derive']}
bincode = "1.3"
rayon = "1"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.3"
rusty-fork = "0.3.0"